# docs/swagger.yaml
@@ -23,6 +23,28 @@ definitions:
     - page_id
     - page_size
     type: object
+  api.TransferRequest:
+    properties:
+      amount:
+        type: integer
+      currency:
+        enum:
+        - USD
+        - EUR
+        - CAD
+        type: string
+      from_account_id:
+        minimum: 1
+        type: integer
+      to_account_id:
+        minimum: 1
+        type: integer
+    required:
+    - amount
+    - currency
+    - from_account_id
+    - to_account_id
+    type: object
   util.ErrorResponse:
     properties:
       error:
@@ -139,4 +161,30 @@ paths:
       summary: Gets List Of User Account
       tags:
       - v1/Account
+  /v1/transfer:
+    post:
+      consumes:
+      - application/json
+      description: takes input and transfers money from -> to
+      parameters:
+      - description: TransferRequest
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/api.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/util.OkResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+      summary: Transfer's money from Acc1 to Acc2
+      tags:
+      - v1/TransferMoney
 swagger: "2.0"
